--- a/Day_1_Basics.ipynb
+++ b/Day_1_Basics.ipynb
@@ -6,7 +6,7 @@
       "name": "Day 1 Basics.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN8gmIx9Pt+fTwGrQK1wF7X",
+      "authorship_tag": "ABX9TyPWks9BJCfiCWLzEA+UZVio",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,61 +35,6 @@
       ],
       "metadata": {
         "id": "b7O70sgC0EIl"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "_PEpFIRL0EDb"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "emPRoewH0D_s"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "AG5uiBg20D7A"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "OeIJRwbi0D2Q"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "b85Mp-Cd0D0U"
       },
       "execution_count": null,
       "outputs": []
@@ -183,17 +128,17 @@
     {
       "cell_type": "code",
       "source": [
-        "'this is a string'"
+        "'This is a string'"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 38
         },
-        "id": "oiEhgEtd0Z83",
-        "outputId": "43d34649-77c5-4f31-8231-9765314eb934"
+        "id": "CpLoIXrbrLZ0",
+        "outputId": "51e83cca-3e19-4d3d-9e1f-f21cb2f0f285"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -202,7 +147,97 @@
               "type": "string"
             },
             "text/plain": [
-              "'this is a string'"
+              "'This is a string'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'This is a string'"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 38
+        },
+        "id": "RrtdKj0_qzrp",
+        "outputId": "13209863-e288-4166-878e-8d73f8636be0"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'This is a string'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'This is a string'"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 38
+        },
+        "id": "m51DCUo3qzZE",
+        "outputId": "df48e1af-a75a-4e73-cd63-44c72bd7c4ef"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'This is a string'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'This is a string'"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 38
+        },
+        "id": "z0GHEsKkqzIO",
+        "outputId": "207f0b12-5c48-4834-8ccb-5f46cea5ad4e"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'This is a string'"
             ]
           },
           "metadata": {},
@@ -213,22 +248,26 @@
     {
       "cell_type": "code",
       "source": [
-        "len('this is a string')"
+        "'This is a string'"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 38
         },
-        "id": "clex8o210kpi",
-        "outputId": "466f07b2-a604-4097-8df2-0d725d27e14c"
+        "id": "UkgHG50MqyuV",
+        "outputId": "b79a9271-391d-4d03-e62a-f7bcf0c8f948"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
             "text/plain": [
-              "16"
+              "'This is a string'"
             ]
           },
           "metadata": {},
@@ -239,13 +278,65 @@
     {
       "cell_type": "code",
       "source": [
-        "s='this is a string'"
+        "len('This is a string')"
       ],
       "metadata": {
-        "id": "EVTj-XF_0kdQ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LIEpFYnsrWmY",
+        "outputId": "144ce85e-8344-481a-8f59-121ee50b4abd"
       },
-      "execution_count": null,
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "16"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s = 'This is a string'"
+      ],
+      "metadata": {
+        "id": "Ue-WzHJ1rhex"
+      },
+      "execution_count": 7,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(s)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EZPMbVjfr1Ic",
+        "outputId": "0652222e-7b6c-473a-ce24-c3855a98fc39"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "16"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -286,15 +377,22 @@
       }
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        ""
+        "Python can use indexes to call parts of the sequence. Let's learn how this works."
       ],
       "metadata": {
-        "id": "ZHO100G6HCYd"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "qsJhyTifsoc1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "In Python, we use brackets [] after an object to call its index. We should also note that indexing starts at 0 for python. Let's create a new object called s and the walk through a few examples of indexing."
+      ],
+      "metadata": {
+        "id": "R1Hp0I_otlt-"
+      }
     },
     {
       "cell_type": "code",
@@ -334,7 +432,7 @@
         "id": "VcsOfuXzHb_3",
         "outputId": "62a28785-4d3f-469f-bd65-9e4e0b72d511"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -396,7 +494,7 @@
         },
         "outputId": "63fe3a23-ea94-4f84-84de-e13ae45be60d"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -412,17 +510,6 @@
           "execution_count": 13
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "SF8gw7bPHzum"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -448,7 +535,7 @@
         "id": "NC1GNCxZdRAN",
         "outputId": "633eabac-9f42-40f9-ed16-ec3fe77d6fac"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -472,25 +559,25 @@
     {
       "cell_type": "code",
       "source": [
-        "greeting = \"Hello\"\n",
-        "name = input(\"What is your sweet name ?\")\n",
+        "greeting = \"Hello \"\n",
+        "name = input(\"What is your sweet name ? \")\n",
         "print(greeting + name)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Oj0XCMFXeCSe",
-        "outputId": "6ea0673a-394e-4e2a-c4d6-c8838f355699"
+        "id": "q8i2yJieum3I",
+        "outputId": "0ecf4ad1-eecf-49a7-ee11-444b23681e26"
       },
-      "execution_count": 17,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "What is your sweet name ?Tasha\n",
-            "HelloTasha\n"
+            "What is your sweet name ? Ayesha\n",
+            "Hello Ayesha\n"
           ]
         }
       ]
@@ -498,30 +585,30 @@
     {
       "cell_type": "code",
       "source": [
-        "name = input('what is your name: ')\n",
-        "age = input('what is your age: ')\n",
-        "city = input('where do you live: ')\n",
+        "user = \"Hello \"\n",
+        "name = input(\"What is your name my friend? \")\n",
+        "age = input(\"How old are you? \")\n",
+        "city = input(\"What city do you live in? \")\n",
         "\n",
-        "print(f'Hi there, {name}, you look great for a person of {age}, and you are from {city} which is excellent')\n",
-        "\n"
+        "print(f'Hi there, {name}, you look great for a persons of {age}, and you are from {city} which is excellent ')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "G2PxTlxleB2j",
-        "outputId": "04070429-e644-4123-fe9b-11a59990bc5b"
+        "id": "eJQAb-BkvkcU",
+        "outputId": "aed2e069-892b-42a7-d29e-d69c281a1cb7"
       },
-      "execution_count": 18,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "what is your name: Tasha\n",
-            "what is your age: 23\n",
-            "where do you live: New York\n",
-            "Hi there, Tasha, you look great for a person of 23, and you are from New York which is excellent\n"
+            "What is your name my friend? Ayesha\n",
+            "How old are you? 23\n",
+            "What city do you live in? Jamaica\n",
+            "Hi there, Ayesha, you look great for a persons of 23, and you are from Jamaica which is excellent \n"
           ]
         }
       ]
@@ -538,7 +625,7 @@
         "id": "IVMDb4D4hiHX",
         "outputId": "b68f565a-d83a-4238-8feb-7879b6ba0429"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -552,29 +639,128 @@
     {
       "cell_type": "code",
       "source": [
-        "r = input('red')\n",
-        "g = input('green')\n",
-        "print(f'The colors are {r} and {g}' .format(r, g))"
+        "print(\"The colors are {} {} {} \".format(\"Red\", \"Green\", \"Blue\"))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "hMEogTi4ih85",
-        "outputId": "6e816954-f02d-4adf-c16c-7b126d7e82b5"
+        "id": "t3SvpYMjwwfF",
+        "outputId": "4e93c7c8-7ecd-4018-8284-75b9480aaeb3"
       },
-      "execution_count": 20,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "redred\n",
-            "green2\n",
-            "The colors are red and 2\n"
+            "The colors are Red Green Blue \n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"The colors are {0} {1} {2} \".format(\"Red\", \"Green\", \"Blue\"))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bwUH_TpmxUCI",
+        "outputId": "24724ca2-51cb-401e-8e70-8466f716a195"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The colors are Red Green Blue \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"The colors are {0} {0} {0} \".format(\"Red\", \"Green\", \"Blue\"))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "K8nui6grxgH_",
+        "outputId": "aeb31b27-6cfd-4f7a-ee27-2ef21e15b3a1"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The colors are Red Red Red \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"The colors are {2} {2} {2} \".format(\"Red\", \"Green\", \"Blue\"))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KbnlLL8Oxkmv",
+        "outputId": "9889cfc0-c076-4e48-c941-511a36b66013"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The colors are Blue Blue Blue \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"The colors are {r} {g} {b} \".format(r=\"Red\", g=\"Green\", b=\"Blue\"))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9o2QBZwOx2lQ",
+        "outputId": "fa27fcea-bcfa-4996-e874-32c8a76f9271"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The colors are Red Green Blue \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "RE0c0KGbx7R9"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -585,6 +771,214 @@
       "metadata": {
         "id": "dfBbaXNFkI42"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "## We have done some basic math"
+      ],
+      "metadata": {
+        "id": "RZI-0G5AyxW5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 14\n",
+        "print(a)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qb6e6_3Ox9EH",
+        "outputId": "881e81a1-a9e9-4d66-d8e6-5a7f86136dea"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "14\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b = 4\n",
+        "print(b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cVbRFniryF4L",
+        "outputId": "f67b9a47-7374-4a92-af48-9805be3e5fe9"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(a + b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EqMXzqkHyRbO",
+        "outputId": "0226dcac-556d-4c82-ff5b-d0139ac7f338"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "18\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(a - b)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1R05kvCCyUmO",
+        "outputId": "48e7ba7f-cfa4-4c84-bb4a-1d6b75cafb7f"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(a * b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LJe_hVnhyZlq",
+        "outputId": "d6e05e70-7e12-483c-8df9-bf5865d453f2"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "56\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(a / b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xGBCS5qQyc1W",
+        "outputId": "8cb19467-beaf-45cd-fa80-aa7744ba90c8"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3.5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(a // b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jvQ9OlXOyfeG",
+        "outputId": "ee32aa60-cf0b-4548-b47e-dd9be007dc10"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(a % b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QVdNJ9VJyh9Z",
+        "outputId": "27f04999-f178-449d-cc93-871b18d0cac3"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "lcdK8Z1ayllz"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
